2002-03-22  Mikhael Goikhman  <migo@homemail.com>

	* libs/FBidi.{c,h}:
	new files

2002-03-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.c (LoadDefaultLeftButton):
	(LoadDefaultRightButton):
	* fvwm/borders.c (border_draw_vector_to_pixmap):
	* fvwm/screen.h (DecorFace):
	* fvwm/builtins.c (ReadDecorFace):
	fixed transparent vector line support

	* libs/Graphics.c (CreateGradientPixmap):
	fixed potential core dump with illegal gradients

2002-03-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.h (FvwmWindow):
	removed button_background_pixmap member

	* fvwm/update.c (apply_window_updates):
	fixed changing the decoration size

	* fvwm/windowshade.c (CMD_WindowShade):
	* fvwm/frame.c (frame_setup_border):
	* fvwm/functions.c (execute_complex_function):
	removed debug code

	* fvwm/move_resize.c (resize_window):
	fixed aboting of a opaque resize w/ maximized windows
	(ParseOneResizeArgument):
	resize arguments don't take the border into account
	(GetResizeArguments):
	implemented new option "Frame" to the Resize and ResizeMove commands

2002-03-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1:
	* fvwm/builtins.c (ReadDecorFace):
	* fvwm/borders.c (DrawLinePattern):
	implemented transparent drawing color in vector buttons: C == 4

	* libs/defaults.h (MAX_TITLE_BUTTON_VECTOR_LINES):
	* fvwm/builtins.c (ReadDecorFace):
	increased allowed number of lines in a vector button to 10000 and moved
	the definition to defaults.h

	* fvwm/virtual.c (MoveViewport):
	don't send useless M_NEW_PAGE packets

	* fvwm/frame.c:
	* fvwm/borders.c:
	started work on new button/title drawing code

	* fvwm/events.c (HandleExpose):
	don't handle expose on the title bar

	* fvwm/borders.c:
	* fvwm/frame.c (frame_get_sidebar_geometry):
	* fvwm/fvwm.h (FvwmWindow):
	replaced border_state with decor_state

	* libs/defaults.h (NR_RIGHT_BUTTONS):
	added a comment

	* fvwm/events.h:
	* fvwm/events.c (HandleExpose):

	* fvwm/frame.c (frame_setup_border):